--- a/locale/lang/ko-KR.json
+++ b/locale/lang/ko-KR.json
@@ -5,6 +5,20 @@
         "g4_import": ""
     },
     "adm": {
+        "admin.menu100": {
+            "1": "환경설정",
+            "2": "기본환경설정",
+            "3": "관리권한설정",
+            "4": "테마설정",
+            "5": "메뉴설정",
+            "6": "메일 테스트",
+            "7": "팝업레이어관리",
+            "8": "세션파일 일괄삭제",
+            "9": "캐시파일 일괄삭제",
+            "10": "캡챠파일 일괄삭제",
+            "11": "썸네일파일 일괄삭제",
+            "12": "phpinfo()"
+        }
     },
     "bbs": {
     }
